# gitignore-template-generator

./: .gitignore  CHANGELOG.md  Cargo.toml  DOCUMENTATION.md  Makefile.toml  README.md  bootstrap.sh  cliff.toml  rustfmt.toml
.github/workflows/: notify.yml  release.yml
assets/: help_template.txt
benches/: bin_benchmark.rs
src/: api.rs  config.rs  constant.rs  core.rs  fs.rs  helper.rs  http_client.rs  impls.rs  lib.rs  main.rs  parser.rs  printer.rs  runner.rs  test_helper.rs  validator.rs
src/api/: impls.rs  validator.rs
src/config/: api.rs  impls.rs
src/constant/: cli_options.rs  error_messages.rs  exit_status.rs  help_messages.rs  help_texts.rs  parser_infos.rs  path.rs  template_manager.rs
src/core/: api.rs  impls.rs  tests.rs
src/fs/: api.rs  impls.rs  tests.rs
src/helper/: impls.rs
src/http_client/: api.rs  impls.rs  tests.rs
src/parser/: api.rs  command.rs  impls.rs  tests.rs
src/parser/command/: author.rs  check.rs  endpoint_uri.rs  generator_uri.rs  help.rs  list.rs  lister_uri.rs  server_url.rs  template_names.rs  timeout.rs  timeout_unit.rs  version.rs
src/printer/: impls.rs
src/runner/: api.rs  impls.rs
src/test_helper/: impls.rs
src/validator/: api.rs  impls.rs  tests.rs
tests/: helper.rs  integration_tests.rs  isolation_tests.rs
tests/expected/: ansi_boolean_option_with_value_error.txt  ansi_check_option_no_pos_args_error.txt  ansi_comma_pos_args_error.txt  ansi_comma_whitespace_pos_args_error.txt  ansi_endpoint_uri_no_pos_args_error.txt  ansi_exclusive_argument_error.txt  ansi_generator_uri_no_pos_args_error.txt  ansi_given_multiple_times_error.txt  ansi_help_message.txt  ansi_invalid_scheme_error.txt  ansi_invalid_url_error.txt  ansi_lister_uri_no_pos_args_error.txt  ansi_no_pos_args_error.txt  ansi_non_allowed_timeout_unit_error.txt  ansi_non_integer_timeout_error.txt  ansi_server_url_no_pos_args_error.txt  ansi_unexpected_argument_error.txt  ansi_uri_without_starting_slash_error.txt  ansi_whitespace_pos_args_error.txt  boolean_option_with_value_error.txt  check_option_no_pos_args_error.txt  comma_pos_args_error.txt  comma_whitespace_pos_args_error.txt  endpoint_uri_no_pos_args_error.txt  exclusive_argument_error.txt  generator_uri_no_pos_args_error.txt  given_multiple_times_error.txt  help_message.txt  inexistent_templates_error.txt  invalid_scheme_error.txt  invalid_url_error.txt  lister_uri_no_pos_args_error.txt  local_real_remote_python_rust_template.txt  local_remote_python_rust_template.txt  local_remote_rust_python_template.txt  local_remote_rust_template.txt  local_remote_template_list.txt  local_remote_template_not_found_error.txt  local_rust_python_template.txt  no_pos_args_error.txt  (+9 more)
