[package]
name = "gitignore-template-generator"
version = "0.1.0"
edition = "2024"
description = "Generate templates for .gitignore files"
authors = ["Patacode <pata.codegineer@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Patacode/gitignore-template-generator"
documentation = "https://docs.rs/crate/gitignore-template-generator"
include = ["src/**", "Cargo.toml", "README.md", "LICENSE-**", "CHANGELOG.md"]

[dependencies]
ureq = "3.0.10"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
test_bin = "0.4.0"

[package.metadata.release]
pre-release-commit-message = "chore: prepare for release v{{version}}"
tag-message = "Release {{crate_name}} version {{version}}"
pre-release-replacements = [
  { file = "README.md", search = "\\d+\\.\\d+\\.\\d+", replace = "{{version}}" },
  { file = "CHANGELOG.md", search = "@Unreleased", replace = "{{version}}" },
  { file = "CHANGELOG.md", search = "@ReleaseDate", replace = "{{date}} <a id=\"{{version}}\"></a>" },
  { file = "CHANGELOG.md", search = "\\[comment\\]: <> \\(@PlannedForNextRelease\\)", replace = "[comment]: <> (@PlannedForNextRelease)\n## [@Unreleased] - @ReleaseDate\n" },
]
