[package]
name = "gitignore-template-generator"
version = "0.3.7"
edition = "2024"
description = "A binary crate to generate templates for .gitignore files"
authors = ["Patacode <pata.codegineer@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Patacode/gitignore-template-generator"
documentation = "https://docs.rs/crate/gitignore-template-generator"
keywords = ["git", "gitignore", "template", "project", "toptal"]
categories = [
  "command-line-utilities",
  "api-bindings",
  "config",
  "development-tools",
]
include = ["src/**", "Cargo.toml", "README.md", "LICENSE-**", "CHANGELOG.md"]

[dependencies]
ureq = "3.0.10"
clap = { version = "4.5.32", default-features = false, features = [
  "std",
  "help",
  "color",
  "error-context",
  "derive",
  "usage",
] }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
test_bin = "0.4.0"
mockito = "1.7.0"
regex = "1.11.1"
rstest = "0.25.0"

[package.metadata.release]
pre-release-commit-message = "chore: prepare for release v{{version}}"
tag-message = "Release {{crate_name}} version {{version}}"
pre-release-replacements = [
  { file = "README.md", search = "\\d+\\.\\d+\\.\\d+", replace = "{{version}}" },
  { file = "CHANGELOG.md", search = "@Unreleased", replace = "{{version}}" },
  { file = "CHANGELOG.md", search = "@ReleaseDate", replace = "{{date}} <a id=\"{{version}}\"></a>" },
  { file = "CHANGELOG.md", search = "\\[comment\\]: <> \\(@PlannedForNextRelease\\)", replace = "[comment]: <> (@PlannedForNextRelease)\n## [@Unreleased] - @ReleaseDate\n\n@Content\n" },
]
