[package]
name = "gitignore-template-generator"
version = "0.8.0"
edition = "2024"
description = "A binary crate to generate templates for .gitignore files"
authors = ["Patacode <pata.codegineer@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Patacode/gitignore-template-generator"
documentation = "https://docs.rs/crate/gitignore-template-generator"
keywords = ["git", "gitignore", "template", "project", "toptal"]
categories = [
  "command-line-utilities",
  "api-bindings",
  "config",
  "development-tools",
]
include = [
  "src/**",
  "!src/**/tests.rs",
  "Cargo.toml",
  "README.md",
  "LICENSE-**",
  "CHANGELOG.md",
  "assets/**",
]

[dependencies]
clap = { version = "4.5.32", default-features = false, features = [
  "std",
  "help",
  "color",
  "error-context",
  "derive",
  "usage",
] }
ureq = "3.0.10"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
mockito = "1.7.0"
regex = "1.11.1"
rstest = "0.25.0"
test_bin = "0.4.0"

[package.metadata.release]
pre-release-commit-message = "chore: prepare for release v{{version}}"
tag-message = "Release {{crate_name}} version {{version}}"
pre-release-replacements = [
  { file = "README.md", search = "\\d+\\.\\d+\\.\\d+", replace = "{{version}}" },
  { file = "CHANGELOG.md", search = "@Unreleased", replace = "{{version}}" },
  { file = "CHANGELOG.md", search = "@ReleaseDate", replace = "{{date}} <a id=\"{{version}}\"></a>" },
  { file = "CHANGELOG.md", search = "\\[comment\\]: <> \\(@PlannedForNextRelease\\)", replace = "[comment]: <> (@PlannedForNextRelease)\n## [@Unreleased] - @ReleaseDate\n\n@Content\n" },
  { file = ".version", search = "\\d+\\.\\d+\\.\\d+", replace = "{{version}}" },
]

[[bench]]
name = "bin_benchmark"
harness = false
